# learnrust-reservationsys

./: #.excalidraw  #.md  .env  .gitignore  Cargo.toml  README.md
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs  utils.rs
abi/src/pb/: mod.rs  reservation.rs
rsys/: Cargo.toml
rsys/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230814_033626_1.rs
rsys/src/: error.rs  lib.rs  manager.rs
rsys/src/entities/: mod.rs  post.rs  prelude.rs  reservation_changes.rs  reservations.rs
servi/: Cargo.toml
servi/src/: config.rs  error.rs  lib.rs  main.rs  service.rs
servi/tests/: service.rs
sqlx_tester/: Cargo.toml
sqlx_tester/src/: lib.rs
