[package]
name = "rsys-abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
derive_builder = "0.12.0"
prost = "0.12.1"
prost-types = "0.12.1"
tonic = "0.10.0"

[build-dependencies]
tonic-build = "0.10.0"
