[package]
name = "rsys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
chrono = "0.4.26"
rand = "0.8.5"
rand_distr = "0.4.3"
rsys-abi = { version = "0.1.0", path = "../abi" }
sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "macros",
] }
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["test-util", "macros", "sync"] }
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
dotenvy = "0.15.7"
futures = { version = "0.3.28" }
