[package]
name = "sqlx_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
